Completed setup of Git and Node

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
   <body>
     <h1>Hello World!</h1>
     <p>This is a paragraph</p>
+    <p>This is the second paragraph, and with this lite-server has been configured!</p>
   </body>
 </html>
